--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button onclick="onGetUserPos()" class="btn">My Location</button>
     </div>
     <p>You are at: <span class="user-pos"></span></p>
-    <button onclick="onCopyLocation()" class="btn">Copy Location</button>
+    <button onclick="onCopyLink()" class="btn">Copy Location</button>
     <section>
          <div class="side-info">
             <div class="weather-container" style="width: 100%; height: 70%;">Weather today:</div>
