--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button onclick="onCopyLink()" class="btn">Copy Location</button>
     <section>
          <div class="side-info">
-            <div class="weather-container" style="width: 100%; height: 70%;">Weather today:</div>
+            <div class="weather-container" style="width: 100%; height: 70%;">Weather today:<span></span></div>
             <div class="saved-location-container" style="width: 100%; height: 30%;">
                 <p>Location Table: <span class="locs"></span></p>
             </div>
