--- a/index.html
+++ b/index.html
@@ -3,31 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2:wght@500&family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/editor.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>TravelTip</title>
 </head>
 <body>
-    <h1>TravelTip</h1>
-    <div class="buttons">
-        <input type="text" id="search" placeholder="Search" >
-        <button onclick="onGo()" class="btn">GO</button>
-        <button onclick="onGetUserPos()" class="btn">My Location</button>
-    </div>
-    <p>You are at: <span class="user-pos"></span></p>
-    <button onclick="onCopyLink()" class="btn">Copy Location</button>
+    <header>
+        <h1>TravelTip</h1>
+        <div class="buttons">
+            <input type="text" id="search" placeholder="Search" >
+            <button onclick="onGo()" type="button" class="btn btn-light">GO</button>
+            <button onclick="onGetUserPos()" type="button" class="btn btn-light">My Location</button>
+        </div>
+        <div class="curr-location">
+            <p>You are at: <span class="user-pos">kkk</span></p>
+            <button onclick="onCopyLink()" class="btn btn-light">Copy Location</button>
+        </div>
+    </header>
     <section>
          <div class="side-info">
-            <div class="weather-container" style="width: 100%; height: 70%;">Weather today:</div>
-            <div class="saved-location-container" style="width: 100%; height: 30%;">
+            <div class="weather-container" style="width: 100%; height: 70%; margin: 5%; padding: 0px;">Weather today:</div>
+            <div class="saved-location-container" style="width: 100%; height: 30%; margin: 5%;">
                 <p>Location Table: <span class="locs"></span></p>
             </div>
         </div>
-        <div id="map" style="width: 70%; height: 400px;"></div>
+        <div id="map" style="width: 80%; height: 100vh;"></div>
     </section>
-    <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
+    <!-- <button onclick="onAddMarker()" class="btn-add-marker">Add Marker Speific Location</button>
     <button onclick="onGetUserPos()" class="btn-user-pos">Get User Position</button>
     <button onclick="onGetLocs()" class="btn-get-locs">Get Locations</button>
-    <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button>
+    <button onclick="onPanTo()"class="btn-pan">Pan Map to Tokyo</button> -->
 
     
     
@@ -35,5 +43,6 @@
     <script src="lib/axios.js"></script>
     <script type="module" src="js/app.controller.js"></script>
     <script src="lib/axios.js"></script>
+    <script src="lib/bootstrap.bundle.js"></script>
 </body>
 </html>
