--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="curr-location">
             <p>You are at: <span class="user-pos">kkk</span></p>
-            <button onclick="onCopyLink()" class="btn btn-light">Copy Location</button>
+            <button onclick="onCopyLink()" class="btn btn-light">Copy Github link</button>
         </div>
     </header>
     <section>
