--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </header>
     <section>
          <div class="side-info">
-            <div class="weather-container" style="width: 100%; height: 70%; margin: 5%; padding: 0px;">Weather today:<span></span></div>
-            <div class="saved-location-container" style="width: 100%; height: 30%; margin: 5%;">
+            <div class="weather-container" style="width: 100%; margin: 5%; padding: 0px;">Weather today:<span></span></div>
+            <div class="saved-location-container" style="width: 100%; margin: 5%;">
                 <p>Location Table: <span class="locs"></span></p>
             </div>
         </div>
